<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_alignParentBottom="true"
        android:background="@color/popwindow_background1"
        android:orientation="vertical"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingTop="15dip" >

        <TextView
            android:id="@+id/popwindow_photo_take"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/greybox_bound"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/popwindow_takephoto"
            android:inputType="none"
            android:textColor="@color/popwindow_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/popwindow_photo_select"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/greybox_bound"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/popwindow_selectpicture"
            android:inputType="none"
            android:textColor="@color/popwindow_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/popwindow_photo_cancel"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/greybox_bound"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/search_cancel"
            android:inputType="none"
            android:textColor="@color/popwindow_text"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>