<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popwindow_background"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:stretchColumns="0,1,2" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dip"
                android:visibility="visible" >

                <ImageButton
                    android:id="@+id/popwindow_share_qq"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/share_qq_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:gravity="center"
                    android:text="@string/share_qq"
                    android:textColor="@color/popwindow_text"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dip" >

                <ImageButton
                    android:id="@+id/popwindow_share_weixin"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/share_weixin_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:gravity="center"
                    android:text="@string/share_weixin"
                    android:textColor="@color/popwindow_text"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dip" >

                <ImageButton
                    android:id="@+id/popwindow_share_weixin_circle"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/share_friend_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:gravity="center"
                    android:text="@string/share_friend"
                    android:textColor="@color/popwindow_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dip" >

                <ImageButton
                    android:id="@+id/popwindow_share_tencentwb"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/share_tencentwb_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:gravity="center"
                    android:text="@string/share_tencentwb"
                    android:textColor="@color/popwindow_text"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dip"
                android:visibility="visible" >

                <ImageButton
                    android:id="@+id/popwindow_share_message"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/share_message_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:gravity="center"
                    android:text="@string/share_message"
                    android:textColor="@color/popwindow_text"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dip"
                android:visibility="invisible" >

                <ImageButton
                    android:id="@+id/popwindow_share_sinawb"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/share_sinawb_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:gravity="center"
                    android:text="@string/share_sinawb"
                    android:textColor="@color/popwindow_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/popwindow_share_cancel"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:background="@drawable/greybox_bound"
        android:clickable="true"
        android:gravity="center"
        android:hint="@string/search_cancel"
        android:inputType="none"
        android:textColor="@color/popwindow_text"
        android:textSize="18sp" />

</LinearLayout>